# Pong3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini  pong-3d.sln  pong-3d.vcxproj  vcpkg.json
Pong/data/: minimal_fragment.glsl
assets/shaders/: blur_fragment.glsl  minimal_fragment.glsl  minimal_vertex.glsl  screen_vertex.glsl
data/: minimal_fragment.glsl  minimal_vertex.glsl  screen_fragment.glsl
scripts/: build.sh  debug.sh  deploy.sh  run.sh
src/: Constants.h  GUI.cpp  GUI.h  GameObjects.cpp  GameObjects.h  Maths.cpp  Maths.h  Mesh.cpp  Mesh.h  Screen.cpp  Screen.h  ScreenInGame.cpp  ScreenInGame.h  ScreenMainMenu.cpp  ScreenMainMenu.h  Settings.cpp  Settings.h  Text.h  main.cpp
src/GL/: Framebuffer.cpp  Framebuffer.h  GLDebug.cpp  GLUtilities.cpp  GLUtilities.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
src/Graphics/: Mesh.cpp  Mesh.h
src/Graphics/OpenGL/: BufferObject.h  Framebuffer.cpp  Framebuffer.h  GLResource.h  GLUtils.cpp  GLUtils.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
src/Util/: Keyboard.cpp  Keyboard.h  Profiler.cpp  Profiler.h  Util.cpp  Util.h
src/imgui/: imgui_impl_sfml.cpp
